# capstone

./: README.md  pyproject.toml
capstone/: analytics.ipynb  cvss.py
output/: capstone.twb  ransomware_probabilities.csv  ransomware_probabilities.hyper  vulnerabilities_with_cvss.csv  vulnerabilities_with_cwes.csv
tests/: test_cvss.py
