[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Prateek Mehrotra <mehrotra.prateek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
