[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Prateek Mehrotra <mehrotra.prateek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
